bug: home.pug bug

--- a/views/home.pug
+++ b/views/home.pug
@@ -20,7 +20,7 @@ html
                         a(href='about') 关于
         .adver
             img(src='/images/bg.png')
-        .search#
+        .search#search
             input(class="input", type="text", placeholder="请输入陆游景点或城市")
             .button 搜索
         div(id='tour')
