--- a/views/home.pug
+++ b/views/home.pug
@@ -1,53 +1,54 @@
 doctype html
-html
+html xmlns:v-bind="http://www.w3.org/1999/xhtml"
     head
         title home
         link(rel='stylesheet', href='/stylesheets/style.css')
         link(rel='stylesheet', href='/stylesheets/wapstyle.css')
         script(type='text/javascript', src='/javascripts/vue.js')
+        script(type='text/javascript', src='/javascripts/vue-resource.min.js')
         meta(name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum - scale = 1.0, user - scalable = no")
     body
-        header
-            nav(id='nav')
-                ul
-                    li(class='active')
-                        a(href='home') 首页
-                    li
-                        a(href='informations') 资讯
-                    li
-                        a(href='ticket') 票务
-                    li
-                        a(href='about') 关于
-        .adver
-            img(src='/images/bg.png')
-        .search#search
-            input(class="input", type="text", placeholder="请输入陆游景点或城市", v-model='searchKeyWord')
-            .button(@click='search') 搜索
-        #tour
-            hgroup
-                h2 热门旅游
-                h3 最新的各种旅游资讯推荐
-            .container
-                each infos in info
-                    figure
-                        img(src=infos.img)
-                        figcaption
-                            h4 #{infos.addr}
-                            p #{infos.introduce}
-                            .info
-                                .sat #{infos.sat}
-                                .price #{infos.price}
-                figure
-
-            .clearfix
-        footer(id='footer')
-            .top
-                ul
-                    li
-                        a(href='') 客户端
-                    li
-                        a(href='') 触屏版
-                    li
-                        a(href='') 电脑版
-            .bottom Copyright © Wushao旅行社| 赣ICP 备555555555 号
+        #search
+            header
+                nav(id='nav')
+                    ul
+                        li(class='active')
+                            a(href='home') 首页
+                        li
+                            a(href='informations') 资讯
+                        li
+                            a(href='ticket') 票务
+                        li
+                            a(href='about') 关于
+            .adver
+                img(src='/images/bg.png')
+            .search
+                input(class="input", type="text", placeholder="请输入陆游景点或城市", v-model='searchKeyWord')
+                .button(@click='search') 搜索
+            #tour
+                hgroup
+                    h2 热门旅游
+                    h3 最新的各种旅游资讯推荐
+                .container
+                    template(lang='pug')
+                        figure(v-for='infos in arr')
+                            img(v-bind:src='infos.img')
+                            figcaption
+                                h4 {{infos.addr}}
+                                p {{infos.introduce}}
+                                .info
+                                    .sat {{infos.sat}}
+                                    .price {{infos.price}}
+                    #nextPage(@click='nextPage') 刷新
+                .clearfix
+            footer(id='footer')
+                .top
+                    ul
+                        li
+                            a(href='') 客户端
+                        li
+                            a(href='') 触屏版
+                        li
+                            a(href='') 电脑版
+                .bottom Copyright © Wushao旅行社| 赣ICP 备555555555 号
         script(type='text/javascript', src='/javascripts/home.js')
